--- a/section 2/video 2.5/TensorFlow Operations.ipynb
+++ b/section 2/video 2.5/TensorFlow Operations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -23,23 +23,137 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Common Math functions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "a = tf.constant([[2,4],[3,6],[4,6]])\n",
+    "b = tf.constant([[6],[4]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function tensorflow.python.ops.math_ops.div>"
+       "TensorShape([Dimension(3), Dimension(2)])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tf.div"
+    "a.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([Dimension(2), Dimension(1)])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 3, 4],\n",
+       "       [4, 6, 6]], dtype=int32)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sess.run(tf.transpose(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[12 18 24]\n",
+      " [16 24 24]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sess.run(tf.multiply(tf.transpose(a),b)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  4  6 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sess.run(tf.cumsum([1, 3, 2,5])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-2 -4]\n",
+      " [-3 -6]\n",
+      " [-4 -6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sess.run(tf.negative(a)))"
    ]
   },
   {
@@ -51,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +229,91 @@
     }
    ],
    "source": [
-    "print(sess.run(tf.cross([1., 0., 0.], [0., 1., 0.])))"
+    "print(sess.run(tf.cross([1., 0., 0.], [0., 1., 0.])))\n",
+    "\n",
+    "#https://www.mathsisfun.com/algebra/vectors-cross-product.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Build an equation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Lets say we need to implement 3x^4 + 2x -5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def solve_equation(x):\n",
+    "    return tf.subtract(tf.add(3*tf.pow(x,4),2*x),5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sess.run(solve_equation(1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  Broadcasting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[101 103 105]\n",
+      " [104 106 108]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = tf.constant([[1, 2, 3], [4, 5, 6]], name='a')\n",
+    "b = tf.constant([100, 101, 102], name='b')\n",
+    "add_op = a + b\n",
+    "\n",
+    "with tf.Session() as session:\n",
+    "    print(session.run(add_op))"
    ]
   },
   {
